Change About Me, Create Resume and Beyond Code pages

--- a/public/index.html
+++ b/public/index.html
@@ -90,8 +90,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://github.com/biradon/biradon.github.io/about/" title="About Me">
-                    <span>About Me</span>
+                <a href="https://github.com/biradon/biradon.github.io/about/" title="About Me 🤓">
+                    <span>About Me 🤓</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/biradon/biradon.github.io/resume/" title="Resume 📜">
+                    <span>Resume 📜</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/biradon/biradon.github.io/beyond-code/" title="Beyond Code 🚀">
+                    <span>Beyond Code 🚀</span>
                 </a>
             </li>
         </ul>
